# cal9000

./: .coveragerc  .flake8  Makefile  README.md  dev-requirements.txt  pre-commit  pyproject.toml
.github/workflows/: test.yml
cal9000/: __main__.py  command_bar.py  config.py  date.py  dates.py  events.py  io.py  ui.py
cal9000/render/: calendar.py  day.py  event_manager.py  help.py  main.py
ci/: test.ci
test/: test_calendar.py  test_command_bar.py  test_date.py  test_events.py  test_io.py
test/render/: test_day.py  test_event_manager.py  test_help.py  test_main.py  util.py
