[tool.poetry]
name = "cal9000"
version = "0.2.0"
description = "Vim enabled version of cal(1)"
authors = ["dosisod"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dosisod/cal9000"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Typing :: Typed"
]

[tool.poetry.dev-dependencies]
black = "22.10.0"
flake8 = "5.0.4"
isort = "5.10.1"
mypy = "0.991"
pytest = "7.2.0"

[tool.coverage.run]
# TODO: enable this
# branch = true

omit = [
  "cal9000/ui.py",
  "cal9000/__main__.py",
]

[tool.mypy]
strict = true
namespace_packages = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_unimported = true
warn_unreachable = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
color_output = true

[tool.pytest.ini_options]
addopts = "--cov=cal9000 --cov-report=html --cov-report=term-missing --cov-fail-under=100"

[tool.poetry.scripts]
cal9000 = "cal9000.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
